--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
           crossorigin="anonymous"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Montserrat', sans-serif;
-            background-color: #f8f9fa;
-            color: #343a40;
+            font-family: 'Roboto', sans-serif;
+            background-color: #e9ecef;
+            color: #495057;
         }
 
         header {
@@ -27,24 +27,25 @@
 
         h1 {
             font-size: 2.5rem;
+            color: #61dafb;
         }
 
         .card {
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            background-color: #ffffff;
+            background-color: #f8f9fa;
             text-align: center;
             margin-top: 2rem;
             padding: 1.5rem;
-            transition: transform 0.3s ease-in-out;
+            transition: transform 0.5s ease-in-out;
         }
 
         .card:hover {
-            transform: rotate(6deg) scale(1.07);
+            transform: rotate(6deg) scale(1.1);
         }
 
-		.intro {
+        .intro {
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            background-color: #ffffff;
+            background-color: #f8f9fa;
             text-align: center;
             margin-top: 2rem;
             padding: 1.5rem;
@@ -61,19 +62,19 @@
             width: 30px;
             height: 30px;
             margin-left: 1rem;
-            transition: transform 0.5s ease-in-out;
+            transition: transform 0.8s ease-in-out;
         }
 
         .social-icon:hover {
-            transform: rotate(360deg) scale(1.5);
+            transform: rotate(360deg) scale(1.3);
         }
 
         .btn-rotate {
-            transition: transform 0.5s ease-in-out;
+            transition: transform 0.8s ease-in-out;
         }
 
         .btn-rotate:hover {
-            transform: rotate(360deg) scale(1.5);
+            transform: rotate(360deg) scale(1.3);
         }
     </style>
 </head>
@@ -83,11 +84,11 @@
 </header>
 <main>
     <section class="intro">
-        <h5 class="card-header">Bonjour, je suis un test</h5>
+        <h5 class="card-header">Bonjour, voici mon portfolio du travail effectué en TP développement web à l'ensea</h5>
         <div class="card-body">
-            <h5 class="card-title">Je me spécialise dans le fait de faire des choses</h5>
+            <h5 class="card-title">Vous trouverez le principal de mon travail dans "Landing Page" et l'API.</h5>
             <p class="card-text">
-                et ici je vais vous montrer d'autres choses que j'ai créées liées au développement Web
+                J'ai également personnalisé un petit peu cette page. Bonne journée !
             </p>
         </div>
     </section>
@@ -121,12 +122,12 @@
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
         <li class="ms-3">
-            <a class="text-muted btn-rotate" target="_blank" href="https://github.com/lostmart">
+            <a class="text-muted btn-rotate" target="_blank" href="https://github.com/davus01">
                 <img src="./assets/github.svg" alt="GitHub" class="social-icon"/>
             </a>
         </li>
         <li class="ms-3">
-            <a class="text-muted btn-rotate" target="_blank" href="https://www.linkedin.com/">
+            <a class="text-muted btn-rotate" target="_blank" href="www.linkedin.com">
                 <img src="./assets/linkedin.svg" alt="LinkedIn" class="social-icon"/>
             </a>
         </li>
